# veris-classifier

./: .gitignore  FINE_TUNING.md  LESSONS_LEARNED.md  README.md  app.py  model_card.md  pyproject.toml  requirements.txt
scripts/: 01_ingest_vcdb.py  02_generate_dataset.py  02_generate_dataset_fast.py  03_push_to_hf.py  04_finetune.py  05_deploy_spaces.sh  06_evaluate.py  07_validate_dataset.py  08_prepare_autotrain.py  09_generate_qa.py  10_launch_finetune.py  11_deploy_spaces.py  12_train_via_api.py  13_launch_training_space.py
spaces/: README.md
src/veris_classifier/: __init__.py  classifier.py  enums.py  validator.py
